# eggy_slam

./: .gitignore  CMakeLists.txt  README.md  batch_pipeline.py  main.cpp  trajectory.cpp  trajectory.h
config/: bag.yaml  dipgseg_orin.yaml  dipgseg_rs128_hp.yaml  lio.yaml  m-detector.yaml  rs128.yaml  trans.py
fastlio/: lio_node.cpp  lio_node.h  utils.cpp  utils.h
fastlio/config/: lio.yaml
fastlio/map_builder/: commons.h  ieskf.cpp  imu_processor.cpp  map_builder.cpp  map_builder.h
fastlio/src/: lio_node.cpp  lio_node.h  utils.cpp  viewer.h
fastlio/src/map_builder/: commons.cpp  lidar_processor.cpp  map_builder.cpp
ground_constrain/: backend_optimization.cpp  ceresfunc_ground.cpp  gc_node.cpp
ground_constrain/include/: KeyFrame.h  backend_optimization.h  ceresfunc_ground.h  extract_fit_ground_plane.h  ground_plane_utils.h  make_keyframes.h
ground_constrain/include/dipgseg/: cpst.py  dipgseg.h  labeler.h  projection_param.h  projection_param.h.bk  second_level_repair.h
hba/src/: hba_node.cpp
hba/src/hba/: commons.h  hba.cpp  hba.h
m-detector/: CMakelists.txt  DynObjCluster.cpp  DynObjFilter.cpp  dyn_node.cpp  dyn_node.h  dyr_node.cpp  main.cpp  utils.h
m-detector/config/: m.yaml
m-detector/include/: DynObjCluster.h  DynObjFilter.h  m_utils.h  parallel_q.h  types.h  utils.h
m-detector/include/cluster_predict/: dbscan.h  tools.hpp  voxel_cluster.h
stitch/: stitch.cpp
tools/: main.cpp  toRosbag.cpp  vis.py
tools/stitch/: stitch.cpp
tools/toRosbag/: toRosbag.cpp  toRosbag.h
